--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,6 +1,6 @@
 overrides:
   - files: "*.md"
     options:
-      proseWrap: always
+      proseWrap: preserve
   - files: "*.css"
     tabWidth: 4
