Enable prettier option proseWrap: always (#31)

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,6 +1,6 @@
 overrides:
   - files: "*.mdx"
     options:
-      proseWrap: preserve
+      proseWrap: always
   - files: "*.css"
     tabWidth: 4
