--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "classnames": "^2.2.6",
         "core-js": "^3.4.1",
         "mobx": "^4.2.0",
+        "query-string": "^7.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "styled-components": "^4.4.1"
