--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "lint:prettier": "yarn lint:prettier:base --check"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-alpha.70",
-        "@docusaurus/preset-classic": "2.0.0-alpha.70",
+        "@docusaurus/core": "2.0.0-beta.0",
+        "@docusaurus/preset-classic": "2.0.0-beta.0",
         "classnames": "^2.2.6",
         "core-js": "^3.4.1",
         "mobx": "^4.2.0",
