Update CODEOWNERS to stop spamming Chris (#75)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,9 @@
 # See CODEOWNERS syntax documentation at:
 # https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners#codeowners-syntax
 
-* @chrisc11
-/src/ @memfault/owners-typescript @chrisc11
-/docs/ @memfault/owners-docs
+* @owners-docs
+/src/ @memfault/owners-typescript
+
+/docs/embedded/ @memfault/owners-mcu
+/docs/mcu/ @memfault/owners-mcu
+/docs/android/ @memfault/owners-kotlin
