MFLT-3720: Rename URLs and links containing "embedded" to MCU and add redirects (#72)
* Rename URLs and links containing "embedded" to MCU and add redirects

* Prettified Code!

* Fix two additional broken links

* Fix .forestry/settings.yml

Co-authored-by: fnune <fnune@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "swizzle": "docusaurus swizzle",
         "deploy": "docusaurus deploy",
         "serve": "docusaurus serve",
-        "lint:prettier:base": "prettier '**/*.{js,jsx,ts,tsx,md,mdx}'",
+        "lint:prettier:base": "prettier '**/*.{js,jsx,ts,tsx,md,mdx}' --ignore-path=.gitignore",
         "lint:prettier:fix": "yarn lint:prettier:base --write",
         "lint:prettier": "yarn lint:prettier:base --check"
     },
