--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -25,8 +25,8 @@ sections:
   create: all
   match: "**/*"
 - type: directory
-  path: docs/embedded
-  label: Embedded
+  path: docs/mcu
+  label: MCU
   create: all
   match: "**/*"
 - type: directory
