Add a small script for checking page ids (#182)
This script checks if a page `id: ` tag matches the basename (without
extension) of the file, and returns non-zero if there's a mismatch.

This helps reduce confusion IMO, and I didn't see a reason to not
require it.

Add the check to github actions.

Correcting the ones that don't match by following this strategy:

- rename the _file_ (NOT the ID) to match the ID. this preserves
  external links, since the slug is based on the ID. the file name is
  not used in the generated site.
- update any cross links here that use the file name to match the new
  name (docusaurus fails to compile when they're broken 😍)
- run prettier (npx prettier --write $(gd HEAD --name-only))

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          # Make sure the actual branch is checked out when running on pull requests
+          ref: ${{ github.head_ref }}
+
+      - name: Check IDs
+        # check all mdx files have an id: tag matching the filename
+        run: |
+          ./check-id.py $(find . -name '*.mdx' | sort)
+
   # For pull requests generated from a fork, we run the prettier linter
   # but leave it up to the user to fix locally since we would need extra
   # permissions to be able to push a auto-fix commit to the forked repo
