--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "query-string": "^7.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-icons": "^4.3.1",
         "styled-components": "^4.4.1"
     },
     "browserslist": {
