--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "classnames": "^2.2.6",
         "core-js": "^3.4.1",
         "mobx": "^4.2.0",
+        "prismjs": "^1.28.0",
         "query-string": "^7.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
