--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
         "@docusaurus/preset-classic": "2.0.0-beta.18",
         "classnames": "^2.2.6",
         "core-js": "^3.4.1",
+        "hast-util-is-element": "1.1.0",
         "mobx": "^4.2.0",
         "prismjs": "^1.28.0",
         "query-string": "^7.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^4.3.1",
+        "rehype-katex": "5",
+        "remark-math": "3",
         "styled-components": "^4.4.1"
     },
     "browserslist": {
