Update docusaurus to 2.0.1 (#292)
It's no longer in beta, update it:

```bash
❯ yarn upgrade @docusaurus/core@latest @docusaurus/preset-classic@latest @docusaurus/plugin-ideal-image@latest
```

Also update `browserlist`, it was complaining about out of date db:

```bash
❯ npx browserslist@latest --update-db
```

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "lint:prettier": "yarn lint:prettier:base --check"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-beta.18",
-        "@docusaurus/plugin-ideal-image": "2.0.0-beta.18",
-        "@docusaurus/preset-classic": "2.0.0-beta.18",
+        "@docusaurus/core": "^2.0.1",
+        "@docusaurus/plugin-ideal-image": "^2.0.1",
+        "@docusaurus/preset-classic": "^2.0.1",
         "@endiliey/react-ideal-image": "^0.0.11",
         "classnames": "^2.2.6",
         "core-js": "^3.4.1",
