--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,6 +41,10 @@ jobs:
         run: |
           ./check-id.py $(find . -name '*.mdx' | sort)
 
+      - name: Check Linux SDK links
+        run: |
+          ./check-linux-sdk-links.sh
+
   # For pull requests generated from a fork, we run the prettier linter
   # but leave it up to the user to fix locally since we would need extra
   # permissions to be able to push a auto-fix commit to the forked repo
