--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,16 +15,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
+          # required to prevent overriding GITHUB_TOKEN, which needs to use a
+          # PAT to re-trigger the actions if there are changes pushed
+          persist-credentials: false
           # Make sure the actual branch is checked out when running on pull requests
           ref: ${{ github.head_ref }}
 
       - name: Prettify code
-        uses: creyD/prettier_action@v3.1
+        uses: creyD/prettier_action@v4.3
         with:
           # This part is also where you can pass other options, for example:
           prettier_options: --write **/*.{js,md,mdx}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MEMFAULT_BOT_ACCOUNT_PAT }}
 
   lint:
     runs-on: ubuntu-latest
