--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
         "prettier": "^2.5.1",
         "react-datocms": "^3.0.15",
         "sharp": "^0.31.3"
+    },
+    "volta": {
+        "node": "18.16.0",
+        "yarn": "1.22.19"
     }
 }
